# sop-extractor

./: .gitignore  CHANGELOG.md  LICENSE.md  Makefile  NOTICES.md  README-PTBR.md  README.md  SKILL.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  deploy-docs.yml
book_to_skill/: config.py  utils.py
book_to_skill/parsers/: subtitle.py
docs/: ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  COLAB_GUIDE.md  COLAB_SCRIPT_INCIDENTS.md  EXTRACTION_PREFLIGHT_CHECKLIST.md  FASE0_FILES_MANIFEST.sha256  FASE0_INGESTION_SUMMARY.md  INFRA_MATURITY_PLAN.md  OPERATING_CONVENTIONS.md  PERFORMANCE.md  PIPELINE_ARCHITECTURE.md  PROVENANCE_LOOP_PLAN.md  RELEASE_v1.5.0.md  RELEASE_v1.5.0_EN.md  RELEASE_v2.2.0.md  RELEASE_v2.2.0_EN.md  ROADMAP.md  index.md  whisper-models-swot.md
domains/market-structure/: synonyms.json
examples/: colab_transcribe.ipynb  colab_transcribe_verified.ipynb  colab_validate_fase0.ipynb
schemas/: domain_synonyms.schema.json  set_manifest.schema.json
scripts/: _runlog.py  banner.txt  build_set_manifest.py  detect_changes.py  determinism_score.py  domain_synonyms.py  extract_frames_at_timestamps.py  extraction_summary.py  format_registry.py  ingest.py  menu.py  merge_architecture_audit.py  preflight_scan.py  render_skill_viewer.py  validate_all.py  validate_architecture_audit.py  validate_coherence_audit.py  validate_evolution_audit.py  validate_manifest.py  validate_run_report.py  verify_concept_presence.py  write_run_manifest.py
sopx/: __init__.py  cache.py  config.py
sopx/ingest/: __init__.py  adapters.py  colab.py  hardware.py  importer.py  pipeline.py  router.py
tests/: conftest.py  test_book_to_skill.py  test_build_set_manifest.py  test_cache.py  test_config.py  test_detect_changes.py  test_determinism_score.py  test_domain_synonyms.py  test_extract_frames_at_timestamps.py  test_extraction_summary.py  test_format_parity.py  test_hardware.py  test_ingest_adapters.py  test_ingest_cli.py  test_ingest_pipeline.py  test_menu.py  test_merge_architecture_audit.py  test_preflight_scan.py  test_render_skill_viewer.py  test_runlog.py  test_sopx_cache.py  test_sopx_config.py  test_sopx_ingest_adapters.py  test_sopx_ingest_pipeline.py  test_stress_ingestion.py  test_validate_architecture_audit.py  test_validate_coherence_audit.py  test_validate_evolution_audit.py  test_validate_manifest.py  test_validate_run_report.py  test_verify_concept_presence.py  test_write_run_manifest.py
