[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sop-extractor"
version = "1.4.0"
description = "Compile any author's books and video courses into a provenance-tracked, time-audited doctrine an LLM can reason from."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }

[project.scripts]
book-to-skill = "book_to_skill.cli:main"
sopx = "scripts.menu:main"

[tool.hatch.build.targets.wheel]
packages = ["book_to_skill", "scripts", "sopx"]

[project.optional-dependencies]
epub = ["ebooklib", "beautifulsoup4"]
pdf = ["pypdf", "pdfminer.six"]
docx = ["python-docx"]
rtf = ["striprtf"]
technical = ["docling"]
all = [
    "ebooklib",
    "beautifulsoup4",
    "pypdf",
    "pdfminer.six",
    "python-docx",
    "striprtf",
    "docling"
]
ingest = [
    "yt-dlp>=2024.1.0",
    "faster-whisper>=1.0.0",
    "pyyaml>=6.0",
]


# Tooling config so `ruff check .` and `pytest` locally match CI without flags.
[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
# High-value gate only: syntax errors (E9) + pyflakes (F). Style stays ungated.
select = ["E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
